# fota-mqtt-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  rocky.toml
src/: custom_error.rs  file_handler.rs  httpserver.rs  jobs.rs  main.rs  messenger.rs  settings.rs  telemetry.rs
tools/device_dummy/: README.md  main.py  requirements.txt
