[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking"] }
bytes = "1"
rumqttc = "0.24.0"
pretty_env_logger = "0.4"
log = "0.4"
tokio = { version = "1", features = ["full"] } 
ciborium = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex-literal = "0.4"
config = { version = "0.14", features = ["toml"] }
lazy_static = "1.5.0"
